# persistent_ros_node

./: CMakeLists.txt  README.md  package.xml
src/: persistent_node.cpp
